fixed z-index

--- a/public/asset/css/main.css
+++ b/public/asset/css/main.css
@@ -283,3 +283,7 @@ a {
     background-size: cover;
     background-position: center center;
 }
+
+.z-index-2{
+    z-index: 2!important;
+}
